--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<datasource-proxy.version>1.3.3</datasource-proxy.version>
+		<p6spy.version>2.1.4</p6spy.version>
 	</properties>
 
 	<dependencies>
@@ -80,6 +82,13 @@
             <artifactId>logback-core</artifactId>
             <version>1.1.2</version>
         </dependency>
+
+		<!-- Log binding parameter into sql statements -->
+		<dependency>
+			<groupId>p6spy</groupId>
+			<artifactId>p6spy</artifactId>
+			<version>${p6spy.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
