--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_template
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:postgresql://localhost:5432/spring_template?
 spring.datasource.username=develop
 spring.datasource.password=123456
 
@@ -10,6 +11,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = create-drop
 
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts = true
+spring.jpa.properties.hibernate.order_updates = true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data = true
