--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,24 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:postgresql://localhost:5432/spring_template?
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:postgresql://localhost:5432/spring_template?
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_template?rewriteBatchedStatements=true
+spring.datasource.driver=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
+spring.datasource.initialization-mode=always
+### Jpa configuration
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
-
-logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+spring.jpa.hibernate.ddl-auto=update
+### Oauth2
+#security.oauth2.resource.filter-order=3
+security.oauth2.resource.id=oauth2_application
+access_token.validity_period=3600
+refresh_token.validity_period=10000
+### Json Format
 spring.jackson.property-naming-strategy=SNAKE_CASE
 
-
-spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts = true
-spring.jpa.properties.hibernate.order_updates = true
-spring.jpa.properties.hibernate.jdbc.batch_versioned_data = true
