--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
       <artifactId>p6spy</artifactId>
       <version>${p6spy.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+      <artifactId>sonar-maven-plugin</artifactId>
+      <version>3.6.0.1398</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -109,4 +115,19 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>sonar</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <!-- Optional URL to server. Default value is http://localhost:9000 -->
+        <sonar.host.url>
+          http://localhost:9000
+        </sonar.host.url>
+      </properties>
+    </profile>
+  </profiles>
 </project>
